--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.16.1",
+    "faker": "^5.3.1",
+    "miragejs": "^0.1.41",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "seedrandom": "^3.0.5",
+    "txtgen": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
